# 3-python-package-exercise-random-seed-2

./: Pipfile  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/math_randomseed/: __init__.py  cli.py  math_randomseed.py
tests/: test_math_randomseed.py
