[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "math_randomseed"
version = "0.1.0"
packages = ["math_randomseed"]
package_dir = {"" = "src"}

[project]
name = "math_randomseed"
version = "0.1.0"
description = "A simple math operations package"
author = "Your Name"
author_email = "your@email.com"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["math", "operations", "add", "subtract", "multiply", "divide"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = find:
include_package_data = true
install_requires = []
python_requires = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-random-seed-2/tree/main"


