[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["math_randomseed"]

[project]
name = "math_randomseed"
version = "0.1.2"
description = "A simple math operations package"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["math", "operations", "add", "subtract", "multiply", "divide", "get_math_fact"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11,<3.13"

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-random-seed-2/tree/main"